# hub-barber-shop-system-backend

./: .dockerignore  .gitignore  CHANGES.md  Dockerfile  README.md  dev.sh  docker-compose.yml  env.example.env  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt
.github/.workflows/: python-app.yml
.github/workflows/: python-app.yml
collections/: algo-barber-shop.postman_collection.json
entrypoints/: init-app.sh
migrations/: README  README.md  env.py
migrations/versions/: 17ee3de518e9_add_product.py  1a84bda4f0d2_add_foreignkey_entry_products_and_.py  20e8d6586667_add_branch_company.py  2498453a80e6_init_database.py  29b014333201_remove_not_null.py  2e33d3824a30_add_phone_in_models_user.py  30028aedb311_alter_table_in_schedule.py  35292cc0359f_init_database_manager.py  443222914b9e_init_database_manager.py  4baea7fa8489_init_databasemanager.py  4fa983a118ed_add_market_paid.py  5f75b8b1b0d3_init_database_manage.py  68112e5a772b_mensagem_da_migração.py  6a2d3c4e5f6g_alter_schedule_service_id_to_uuid_array.py  6ca4ceee9809_set_company_id_not_null.py  7c82fabbe69c_add_columns_passoword_users_owners_and_.py  7fe50eda1dd4_add_schedule_of_relations_with_shedule_.py  8f7df58863ed_add_fk_compaines_in_table_users.py  905555cffb5f_add_employe_products.py  9a7a0f2b1c3d_add_schedule_finance_and_expense.py  a1b2c3d4e5f6_schedule_block_date_range.py  a1b2c3d4e5f7_user_subscription_payment_info.py  b09c8bcc5d83_add_owner.py  b2c3d4e5f6a0_subscription_multiline_and_schedule_sub.py  b7c8d9e0f1a2_add_service_id_to_schedule_finance.py  c1d2e3f4a5b6_add_template_marketing.py  c3f0a1b2c3d4_add_cash_register.py  cdd3802fe8df_adjust_tables.py  d1e2f3a4b5c7_add_subscription_plan.py  e2f3a4b5c6d7_add_employee_start_end_journey.py  e2f3a4b5c6d8_add_user_subscription.py  f4b090cd5cbe_init_database_manage.py  f7152d4a5ad4_add_url_in_service.py  f7e8d9c0b1a2_employee_journey_time_columns.py  f8a9b0c1d2e3_user_subscription_pending_payment.py
requirements/: devrequirements.txt
src/: external.py  main.py
src/auth/: hash_compact.py
src/bot/: core.py  response_dictionary.py  schedule.py  users.py
src/core/: analytical.py  avaliable.py  bot.py  config.py  dashboard.py  employee.py  finance.py  log.py  login.py  product.py  schedule.py  settings.py  shedule.py  subscription.py  urls.py  user.py
src/db/: database.py  extensions.py
src/log/: log.py
src/model/: cash_register.py  company.py  employee.py  model.py  owner.py  product.py  product_employee.py  schedule.py  schedule_block.py  schedule_extra.py  signature.py  transaction.py  user.py
src/resource/: __init__.py  analytical.py  avaliable.py  bot.py  company.py  dashboard.py  employee.py  finance.py  login.py  onwer.py  product.py  schedule.py  shedule.py  subscription.py  user.py
src/service/: backup_database.py  company.py  employee.py  login.py  owner.py  product.py  product_employee.py  redis.py  schedule.py  schedule_block.py  slots.py  user.py
src/settings/: _base.py
src/templates/: base.html
src/utils/: log.py  maskphone.py  metadata.py  product.py  (+3 more)
tests/: conftest.py
(+351 files in other folders)
